erDiagram
  Vulnerability {
    UUID asset_uuid FK
    TEXT recast_reason
    TEXT recast_rule_uuid
    UUID scan_uuid FK
    TEXT severity
    INTEGER severity_id
    INTEGER severity_default_id
    TEXT severity_modification_type
    TIMESTAMPZ first_found
    TIMESTAMPZ last_fixed
    TIMESTAMPZ last_found
    TIMESTAMPZ indexed
    TEXT state
    TEXT source
  }

  VulnerabilityPort {
    UUID vulnerability_uuid FK "*"
    INTEGER port
    TEXT protocol
    TEXT service
  }

  Scan {
    UUID uuid PK
    TEXT schedule_uuid
    TIMESTAMPZ started_at 
  }

  Asset {
    UUID uuid PK
    UUID agent_uuid
    UUID bios_uuid
    TEXT device_type
    TEXT fqdn
    TEXT hostname
    TEXT ipv4
    TEXT ipv6
    TIMESTAMPZ last_authenticated_results
    TIMESTAMPZ last_unauthenticated_results
    TEXT mac_address
    TEXT netbios_name
    TEXT network_id
    BOOL tracked
  }

  AssetOS {
    UUID asset_uuid FK "*"
    TEXT operating_system "*"
  }

  Plugin {
    INTEGER uuid PK
    TEXT canvas_package
    BOOL checks_for_default_account
    BOOL checks_for_malware
    FLOAT cvss3_base_score
    FLOAT cvss3_temporal_score
    FLOAT cvss3_vector
    FLOAT cvss_base_score
    FLOAT cvss_temporal_score
    TEXT d2_elliot_name
    TEXT description
    BOOL exploit_available
    BOOL exploit_framework_canvas
    BOOL exploit_framework_core
    BOOL exploit_framework_d2_elliot
    BOOL exploit_framework_exploithub
    BOOL exploit_framework_metasploit
    TEXT exploitability_ease
    BOOL exploited_by_malware
    BOOL exploited_by_nessus
    TEXT exploithub_sku
    TEXT family
    TEXT family_id
    BOOL has_patch
    BOOL in_the_news
    TEXT metasploit_name
    TEXT ms_bulletin
    TEXT name
    TIMESTAMPZ patch_publication_date
    TIMESTAMPZ modification_date
    TIMESTAMPZ publication_date
    TEXT risk_factor
    TEXT solution
    TEXT stig_severity
    TEXT synopsis
    TEXT type
    BOOL unsupported_by_vendor
    TEXT usn
    TEXT version
    TIMESTAMPZ vuln_publication_date
  }

  PluginVpr {
    INTEGER plugin_id FK "*"
    FLOAT score
    TIMESTAMPZ updated
  }

  PluginCvssTemporalVector {
    INTEGER plugin_uuid FK
    TEXT exploitability
    TEXT remediation_level
    TEXT report_confidence
    TEXT raw   
  }

  PluginCvss3TemporalVector {
    INTEGER plugin_uuid FK
    TEXT exploitability
    TEXT remediation_level
    TEXT report_confidence
    TEXT raw
  }

  PluginCvssVector {
    INTEGER plugin_uuid FK
    TEXT access_vector
    TEXT access_complexity
    TEXT authentication
    TEXT confidentiality_impact
    TEXT integrity_impact
    TEXT availability_impact
    TEXT raw
  }

  PluginCvss3Vector {
    INTEGER plugin_uuid FK
    TEXT access_vector
    TEXT access_complexity
    TEXT authentication
    TEXT confidentiality_impact
    TEXT integrity_impact
    TEXT availability_impact
    TEXT raw
  }

  PluginBugtraq {
    INTEGER plugin_uuid FK "*"
    INTEGER bugtraq_id "*"
  }

  PluginCpe {
    INTEGER plugin_uuid FK "*"
    TEXT cpe "*"
  }

  PluginCve {
    INTEGER plugin_uuid FK "*"
    TEXT cve "*"
  }
  
  Plugin ||--|| PluginVpr : has
  Plugin ||--|| PluginCvssVector : has
  Plugin ||--|| PluginCvss3Vector : has
  Plugin ||--|| PluginCvssTemporalVector : has
  Plugin ||--|| PluginCvss3TemporalVector : has
  Plugin ||--|{ PluginBugtraq : has
  Plugin }|--|{ PluginCpe : has
  Plugin }|--|{ PluginCve : has
  Vulnerability ||--|| Plugin : detected-by
  Vulnerability }|--|| VulnerabilityPort : port-of-scanner
  Vulnerability }|--|| Scan : detected-by
  Vulnerability }|--|| Asset : detected-in
  Asset ||--|{ AssetOS : has
